Fixing list underline in Dark Mode

--- a/css/main.css
+++ b/css/main.css
@@ -1300,7 +1300,7 @@ a:active {
   color: #c13d3d !important;
   text-shadow: 0 0 1px red;
 }
-.dark_mode .list-group-flush * {
+.dark_mode .list-group-flush > * {
   color: #ddd !important;
   background-color: #111 !important;
   border: 1px solid rgba(250, 250, 250, 0.125);
